--- a/apps/playground/src/app/main/main.component.html
+++ b/apps/playground/src/app/main/main.component.html
@@ -16,16 +16,7 @@
   </google-chart>
 </div>
 
-<google-chart
-  #chart
-  width="600"
-  [title]="changingChart.title"
-  [type]="changingChart.type"
-  [data]="changingChart.data"
-  [columns]="changingChart.columns"
-  [options]="changingChart.options"
->
-</google-chart>
-
-<button (click)="changeChart()">Change Data</button>
-<button (click)="navigateToTest()">Navigate</button>
+<div class="container">
+  <div class="chart">
+      <google-chart></google-chart>
+  
