--- a/apps/playground/src/app/main/main.component.html
+++ b/apps/playground/src/app/main/main.component.html
@@ -19,4 +19,7 @@
 <div class="container">
   <div class="chart">
       <google-chart></google-chart>
+      <div class="marquee">
+        <div>A million reasons to love web development!</div>
+      </div>
   
